# SuperPacMan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.rc
src/: CMakeLists.txt  Game.cpp  Game.h  Grid.cpp  Grid.h  main.cpp
src/AI/: ActorStateFSM.cpp  ActorStateFSM.h  IActorState.h
src/AI/ghost/: ChaseState.cpp  ChaseState.h  EatenState.cpp  EatenState.h  FrightenedState.cpp  FrightenedState.h  GhostState.cpp  GhostState.h  ScatterState.cpp  ScatterState.h
src/GameObjects/: Door.cpp  Door.h  Fruit.cpp  Fruit.h  GameObjects.h  Ghost.cpp  Ghost.h  Key.cpp  Key.h  PacMan.cpp  PacMan.h  Pellet.cpp  Pellet.h  Sensor.cpp  Sensor.h  Star.cpp  Star.h  Wall.cpp  Wall.h
src/Managers/: AudioManager.cpp  AudioManager.h  CharacterMovementManager.cpp  CharacterMovementManager.h  CollisionManager.cpp  CollisionManager.h  GameFlowManager.cpp  GameFlowManager.h  GameObjectsManager.cpp  GameObjectsManager.h  GuiManager.cpp  GuiManager.h  InputManager.cpp  InputManager.h  ScoreManager.cpp  ScoreManager.h  TimerManager.cpp  TimerManager.h
src/PathFinders/: DistanceStrategy.cpp  DistanceStrategy.h  GhostGridMover.cpp  GhostGridMover.h  PacManGridMover.cpp  PacManGridMover.h
src/Scenes/: CollisionResponseRegisterer.cpp  CollisionResponseRegisterer.h  GameOverScene.cpp  GameOverScene.h  GameplayObserver.cpp  GameplayObserver.h  GameplayScene.cpp  GameplayScene.h  LevelStartScene.cpp  LevelStartScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  PauseMenuScene.cpp  PauseMenuScene.h  StartUpScene.cpp  StartUpScene.h
src/Scoreboard/: Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h
src/animations/: FoodAnimation.cpp  FoodAnimation.h  FruitAnimation.cpp  FruitAnimation.h  GhostAnimations.cpp  GhostAnimations.h  GridAnimation.cpp  GridAnimation.h  PacManAnimations.cpp  PacManAnimations.h  PelletAnimations.cpp  PelletAnimations.h
src/animators/: GhostAnimator.cpp  GhostAnimator.h  IEntityAnimator.h  PacManAnimator.cpp  PacManAnimator.h  PelletAnimator.cpp  PelletAnimator.h
src/common/: Aliases.h  Constants.h  Drawer.cpp  Drawer.h  Events.h  ObjectReferenceKeeper.cpp  ObjectReferenceKeeper.h  PositionTracker.cpp  PositionTracker.h  SpriteContainer.cpp  SpriteContainer.h
src/controllers/: GhostController.cpp  GhostController.h  GhostsController.cpp  GhostsController.h  PacManController.cpp  PacManController.h
src/controllers/movement/: PacManController.cpp  PacManController.h
src/entities/: AllEntities.h  Door.cpp  Door.h  DoorLocker.cpp  DoorLocker.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  IEatable.h  Key.cpp  Key.h  PacMan.cpp  PacMan.h  Pellet.cpp  Pellet.h  Wall.cpp  Wall.h
src/entities/states/: IState.h  StateController.cpp  StateController.h  TimedState.cpp  TimedState.h
src/entities/states/ghost/: ChaseState.cpp  ChaseState.h  EatenState.cpp  EatenState.h  FrightenedState.cpp  FrightenedState.h  GhostIdleState.cpp  GhostIdleState.h  RoamState.cpp  RoamState.h  ScatterState.cpp  ScatterState.h
src/entities/states/pacman/: DyingState.cpp  DyingState.h  NormalState.cpp  NormalState.h  PacManIdleState.cpp  PacManIdleState.h  SuperState.cpp  SuperState.h
src/entity/: AllEntities.h  Door.cpp  Door.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  Key.cpp  Key.h  Movable.cpp  Movable.h  PacMan.cpp  PacMan.h  Pellet.cpp  Pellet.h  Wall.cpp  Wall.h
src/entity/states/: IState.h
src/gameObjects/: AllEntities.h
src/gameObjects/states/: StateController.h
src/gameObjects/states/ghost/: EatenState.h  RoamState.h
src/gameObjects/states/pacman/: DyingState.cpp  NormalState.cpp  PacManIdleState.h  SuperState.cpp
src/models/actors/: Actors.h  Door.cpp  Door.h  DoorLocker.cpp  DoorLocker.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  Key.cpp  Key.h  PacMan.cpp  PacMan.h  Pellet.cpp  Pellet.h  Sensor.cpp  Sensor.h  Wall.cpp  Wall.h
src/models/actors/controllers/: ForwardDirectionalBFS.cpp  ForwardDirectionalBFS.h  GhostGridMover.cpp  GhostGridMover.h  PacManGridMover.cpp  PacManGridMover.h
src/models/actors/states/: ActorStateFSM.cpp  ActorStateFSM.h  IActorState.h  StateController.cpp  StateController.h  TimedState.cpp  TimedState.h
src/models/actors/states/ghost/: ChaseState.cpp  ChaseState.h  EatenState.h  GIdleState.h  (+14 more)
src/models/game/: Game.cpp  Game.h
src/models/scenes/: GameOverScene.cpp  GameOverScene.h  GamePauseScene.cpp  GamePauseScene.h  GameplayScene.cpp  GameplayScene.h  IntroScene.cpp  IntroScene.h  LevelStartScene.cpp  LevelStartScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  StartUpScene.cpp  StartUpScene.h
src/models/scoreboard/: Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h
src/models/world/: Grid.cpp  Grid.h
src/scenes/: IntroScene.cpp  IntroScene.h  LevelStartScene.cpp  LevelStartScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  PlayScene.cpp  PlayScene.h  StartUpScene.cpp  StartUpScene.h
src/scoreboard/: Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h
src/states/: IntroState.cpp  IntroState.h  LevelStartState.cpp  LevelStartState.h  LoadingState.cpp  LoadingState.h  MainMenuState.cpp  MainMenuState.h  PlayingState.cpp  PlayingState.h  StartUpState.cpp  StartUpState.h
src/utils/: ObjectCreator.cpp  ObjectCreator.h  Utils.cpp  Utils.h
src/view/: IntroView.cpp  IntroView.h  LoadingView.h  MainMenuView.cpp  ScoreView.cpp  ScoreView.h
src/views/: CommonView.cpp  CommonView.h  GameOverSceneView.cpp  GameOverSceneView.h  GamePauseSceneView.cpp  GamePauseSceneView.h  IntroSceneView.cpp  IntroSceneView.h  IntroView.cpp  IntroView.h  LevelStartSceneView.cpp  LevelStartSceneView.h  LevelStartView.cpp  LevelStartView.h  LoadingSceneView.cpp  LoadingSceneView.h  LoadingView.cpp  LoadingView.h  MainMenuSceneView.cpp  MainMenuSceneView.h  MainMenuView.cpp  MainMenuView.h  PauseMenuSceneView.cpp  PauseMenuSceneView.h  ScoreView.cpp  StartUpSceneView.cpp  StartUpSceneView.h  StartUpView.cpp  StartUpView.h
src/views/animations/: FruitAnimation.cpp  GhostAnimations.cpp  GhostAnimations.h  GridAnimation.cpp  GridAnimation.h  PacManAnimations.cpp  PelletAnimations.cpp
(+8 files in other folders)
